# tickit

./: CMakeLists.txt  LICENSE  README.md  main.cc
inc/: calendar.h  cmd.h  cmd_handler.h  cmd_parser.h  info_printer.h  path.def  tag.def  task.h  taskbook.h  template.h  util.h  value.def  xml_wrapper.h
inc/date/: date_wrapper.h
inc/view/: table_printer.h
inc/xmlparser/: test.cc  test.xml  xmlparser.h
stat/: plot.py  plot_week.py
templates/: epic.xml  today.task.xml
tool/: clock.py
